# uav-person-tracker

./: .gitignore  CLAUDE.md  PROJECT_NOTES.md  README.md  config.py  config.yaml  infer.py  main.py  pyproject.toml  requirements.txt  task.md  train.py  validate.py
app/: README.md  __init__.py  app_config.yaml  boxes-def.md  config.py  controller.py  main.py  tracking.py  traditional_tracker.py  ui.py
configs/: tracker.yaml  train.yaml
data/: __init__.py  adapn_targets.py  competition_data.py  competition_siamese_dataset.py  competition_submission.py  competition_video.py  crop_utils.py  dataset.py  preprocess.py
docs/: Colab GPU Smoke Test.md  Phase 0 — CNN & Siamese Baselines.md  Pipeline Handoff.md  SiamAPN++ + MobileOne-S2 — Implementation Plan.md  future_experiments.md  future_improvements.md  info-for-agents.md  layer4_plan.md  models_comparisons.md  siamese_tracking_occlusion_notes.md  siamlight_components.md
docs/references/: gg.md  models_comparisons.md  old_design_future_experiments.md  public_dataset_notes.md  siamapn_port_provenance.md  task.md  third_party_notices.md
evaluation/: README.md  __init__.py  basic_eval.py  benchmark_backend.py
inference/: load_model.py  predictor.py  tracker.py  video_runner.py  visualize.py
models/: __init__.py  adapn.py  losses.py  siamapn.py  siamese.py
models/backbone/: __init__.py  mobilenetv3.py  mobilenetv3_tracker.py  mobileone.py
models/tracker/: correlation.py  head.py  siamese_tracker.py
notebooks/: colab-varification.ipynb  train.ipynb
src/: preprocess.py
src/inference/: load_model.py  predictor.py  tracker.py  video_runner.py  visualize.py
tests/: smoke_test.py  test_adapn_golden.py  test_architecture.py  test_config_cli.py  test_crop_utils.py  test_shapes.py  test_tracking.py
train/: __init__.py  config_cli.py  metrics.py  run.py
training/: dataset_loader.py  losses.py  metrics.py  pair_sampler.py  preprocess.py  train.py  trainer.py
