[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uav-person-tracker"
version = "0.1.0"
description = "Siamese network-based UAV person tracker for edge deployment"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1+cu126",
    "torchvision==0.22.1+cu126",
    "torchaudio==2.7.1+cu126",
    "torchinfo==1.8.0",
    "torchmetrics==1.8.2",
    "cython>=3.0",
    "opencv-contrib-python>=4.8",
    "numpy>=2.4.4",
    "pyyaml>=6.0",
    "yacs>=0.1.8",
    "tensorboardX>=2.6",
    "colorama>=0.4.6",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "wrapt>=2.1.2",
    "decord>=0.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.hatch.build.targets.wheel]
packages = ["models", "data", "train", "app", "evaluation"]

[project.scripts]
train = "train.run:main"
project-config = "train.config_cli:main"
eval-public = "evaluation.basic_eval:main"
eval-train = "evaluation.benchmark_backend:main"

[dependency-groups]
ui = [
    "PySide6>=6.7",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
